Data Table header borders added & addMetricClasses fix to properly align number fields

--- a/src/squid_api_datatable_widget.css
+++ b/src/squid_api_datatable_widget.css
@@ -52,6 +52,8 @@ div.dataTables_paginate ul.pagination li.disabled {
 
 .squid-api-data-widgets-data-table thead th {
 	min-width: 150px;
+	border-right: 1px solid #e0e0e0;
+	border-left: 1px solid #e0e0e0;
 }
 
 .squid-api-data-widgets-data-table.setDimensions {
